--- a/MC2-Group6/Info.plist
+++ b/MC2-Group6/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>myOnboarding</string>
+					<string>InitialLoad</string>
 				</dict>
 			</array>
 		</dict>
